Correcting jumping link borders

--- a/src/App.css
+++ b/src/App.css
@@ -111,9 +111,7 @@ footer {
 }
 
 a,
-a:active,
-a:visited,
-a:focus {
+a:active a:visited {
   color: inherit;
   text-decoration: none;
   border-bottom: dashed 1px rgba(0, 0, 0, 0.4);
@@ -136,7 +134,6 @@ a:focus {
   width: 20px;
   vertical-align: -webkit-baseline-middle;
   margin: 0 10px;
-  border: none;
 }
 
 @media only screen and (max-width: 850px) {
